# boardtt

./: .gitignore  AUTHORS  CHANGELOG  Dockerfile  INSTALL  LICENSE  README.rst  pyproject.toml  setup.py
boardtt/: __init__.py  card_area.py  card_type.py  config.py  exceptions.py  logger.py  manager.py  marker.py  tesseract.py  utils.py
examples/: invisible_sun.py  star_wars.py
